test/force-app/main/default/objects/Scenario__c/fields/Active_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Active_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this scenario is currently the active scenario</inlineHelpText>
    <label>Active Scenario</label>
    <type>Checkbox</type>
</CustomField>