test/force-app/main/default/objects/Scenario__c/fields/CPY_System_Size_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>CPY_System_Size_kW_DC__c</fullName>
    <label>CPY System Size (kW DC)</label>
    <summarizedField>EPC_Component__c.System_Size_kW_DC__c</summarizedField>
    <summaryFilterItems>
        <field>EPC_Component__c.Type__c</field>
        <operation>equals</operation>
        <value>CPY</value>
    </summaryFilterItems>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>