test/force-app/main/default/objects/Scenario__c/fields/RT_AEP_kWh_year__c.field-meta.xml
<CustomField>
    <fullName>RT_AEP_kWh_year__c</fullName>
    <label>RT AEP (kWh/year)</label>
    <summarizedField>EPC_Component__c.AEP_kWh_year__c</summarizedField>
    <summaryFilterItems>
        <field>EPC_Component__c.Type__c</field>
        <operation>equals</operation>
        <value>RT</value>
    </summaryFilterItems>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>