test/force-app/main/default/objects/Scenario__c/fields/RT_System_Size_kW_AC__c.field-meta.xml
<CustomField>
    <fullName>RT_System_Size_kW_AC__c</fullName>
    <label>RT System Size (kW AC)</label>
    <summarizedField>EPC_Component__c.System_Size_kW_AC__c</summarizedField>
    <summaryFilterItems>
        <field>EPC_Component__c.Type__c</field>
        <operation>equals</operation>
        <value>RT</value>
    </summaryFilterItems>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>