test/force-app/main/default/objects/Scenario__c/fields/System_Specific_Yield_kWh_kWp__c.field-meta.xml
<CustomField>
    <fullName>System_Specific_Yield_kWh_kWp__c</fullName>
    <formula>Total_AEP_kWh_year__c /  Total_System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Specific Yield (kWh/kWp)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>