test/force-app/main/default/objects/Scenario__c/fields/Total_AEP_kWh_year__c.field-meta.xml
<CustomField>
    <fullName>Total_AEP_kWh_year__c</fullName>
    <inlineHelpText>AEP: Annual Energy Production</inlineHelpText>
    <label>Total AEP (kWh/year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>