test/force-app/main/default/objects/Scenario__c/fields/Total_AEP_kWh_year_calc__c.field-meta.xml
<CustomField>
    <fullName>Total_AEP_kWh_year_calc__c</fullName>
    <formula>RT_AEP_kWh_year__c +  CPY_AEP_kWh_year__c +  GM_AEP_kWh_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AEP (kWh/year) calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>