test/force-app/main/default/objects/Scenario__c/fields/Total_Direct_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Labor__c</fullName>
    <label>Total Direct Labor ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>