test/force-app/main/default/objects/Scenario__c/fields/Total_Direct_Material_calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Material_calc__c</fullName>
    <label>Total Direct Material ($) calc</label>
    <summarizedField>EPC_Component__c.Direct_Material__c</summarizedField>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>