test/force-app/main/default/objects/Scenario__c/fields/Total_EPC_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_EPC_Cost__c</fullName>
    <label>Total EPC Cost ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>