test/force-app/main/default/objects/Scenario__c/fields/Total_EPC_Cost_calc__c.field-meta.xml
<CustomField>
    <fullName>Total_EPC_Cost_calc__c</fullName>
    <label>Total EPC Cost ($) calc</label>
    <summarizedField>EPC_Component__c.EPC_Cost__c</summarizedField>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>