test/force-app/main/default/objects/Scenario__c/fields/Total_EPC_W__c.field-meta.xml
<CustomField>
    <fullName>Total_EPC_W__c</fullName>
    <formula>Total_EPC_Cost__c /  (Total_System_Size_kW_DC__c * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total EPC Cost ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>