test/force-app/main/default/objects/Scenario__c/fields/Total_Indirect_Labor_calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Indirect_Labor_calc__c</fullName>
    <label>Total Indirect Labor ($) calc</label>
    <summarizedField>EPC_Component__c.Indirect_Labor__c</summarizedField>
    <summaryForeignKey>EPC_Component__c.Scenario__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>