test/force-app/main/default/objects/Scenario__c/fields/Total_Indirect_Labor_W__c.field-meta.xml
<CustomField>
    <fullName>Total_Indirect_Labor_W__c</fullName>
    <formula>Total_Indirect_Labor__c / (1000 *  Total_System_Size_kW_DC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Indirect Labor ($/W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>