test/force-app/main/default/objects/Scenario__c/fields/Total_System_Size_kW_AC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_AC__c</fullName>
    <label>Total System Size (kW AC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>