test/force-app/main/default/objects/Scenario__c/fields/Total_System_Size_kW_AC_calc__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_AC_calc__c</fullName>
    <formula>RT_System_Size_kW_AC__c + CPY_System_Size_kW_AC__c + GM_System_Size_kW_AC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System Size (kW AC) calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>