test/force-app/main/default/objects/Scenario__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>NAME</columns>
    <columns>Total_System_Size_kW_DC__c</columns>
    <columns>Total_System_Size_kW_AC__c</columns>
    <columns>Total_AEP_kWh_year__c</columns>
    <columns>System_Specific_Yield_kWh_kWp__c</columns>
    <columns>Total_EPC_Cost__c</columns>
    <columns>Total_EPC_W__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>